<?xml version="1.0"?>
<package format="2">
  <name>eye_tracking</name>
  <version>0.0.1</version>
  <description>eye tracking</description>
  <author email="paolo.forin@phd.unipd.it">Paolo Forin</author>
  <maintainer email="paolo.forin@phd.unipd.it">Paolo Forin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>rosneuro_msgs</depend> 
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
    
</package>
